--- a/swifty_reactor/Code/viewcontroller.swift.liquid
+++ b/swifty_reactor/Code/viewcontroller.swift.liquid
@@ -10,7 +10,7 @@ import BrokerUIKit
 import SnapKit
 import RxSwift
 
-public final class {{ module_info.name }}ViewController: BaseVC, SceneView {
+public final class {{ module_info.name }}VC: BaseVC, SceneView {
     
     /// MARK: Public properties    
 
@@ -34,7 +34,7 @@ public final class {{ module_info.name }}ViewController: BaseVC, SceneView {
 }
 
 /// MARK: Private functions
-extension {{ module_info.name }}ViewController {
+extension {{ module_info.name }}VC {
   
 }
 
