--- a/swifty_reactor/Code/viewcontroller.swift.liquid
+++ b/swifty_reactor/Code/viewcontroller.swift.liquid
@@ -28,7 +28,7 @@ public final class {{ module_info.name }}VC: BaseVC, SceneView {
     	
     }
     
-    public func bind(reactor: {{ module_info.name }Reactor) {
+    public func bind(reactor: {{ module_info.name }}Reactor) {
         
     }
 }
