--- a/swifty_reactor/Code/coordinator.swift.liquid
+++ b/swifty_reactor/Code/coordinator.swift.liquid
@@ -6,8 +6,10 @@
 //  Copyright © {{ year }} {{ developer.company }}. All rights reserved.
 //
 
-import BrokerUIKit
+import RxSwift
 import ModuleCore
+import BrokerData
+import BrokerUIKit
 
 public final class {{ module_info.name }}Coordinator: BaseCoordinator {
     
