--- a/swifty_reactor/Code/viewcontroller.swift.liquid
+++ b/swifty_reactor/Code/viewcontroller.swift.liquid
@@ -53,7 +53,7 @@ public final class {{ module_info.name }}VC: BaseVC, SceneView {
     public func bind(reactor: {{ module_info.name }}Reactor) {
         let binder = ReactorBindings(reactor: reactor, defaultDisposeBag: disposeBag)
 
-        binder.fire(action: .buttonTapped, on: button.rx.animTap) 
+        // binder.fire(action: .buttonTapped, on: button.rx.animTap) 
         binder.map(\.isBusy, to: preloader.inProgress) 
         
     }
