fix "Добавил функцию которая вставится в фабрику"

--- a/swifty_reactor/Code/viewcontroller.swift.liquid
+++ b/swifty_reactor/Code/viewcontroller.swift.liquid
@@ -12,7 +12,7 @@ import BrokerUIKit
 import BrokerData 
 import SnapKit
 
- /// Список новостей для интрумента
+ /// <#Описание#>
  func {{ module_info.name | downcase }}() -> Scene {
     let vc = {{ module_info.name }}VC()
     let reactor = {{ module_info.name }}Reactor()
